--- a/index.html
+++ b/index.html
@@ -139,8 +139,13 @@
     }
 
     function endQuiz() {
-      document.getElementById("quiz").style.display = "none";
-      const result = document.getElementById("result");
+      result.innerHTML = `
+  <h2>Result: ${correctCount}/${questions.length}</h2>
+  <p>To receive your certificate, please complete the payment below:</p>
+  <a class="button" href="https://razorpay.me/@mecktech?amount=14900&currency=INR" target="_blank" onclick="setTimeout(() => window.open('${formURL}', '_blank'), 3000)">Pay ₹149</a>
+  <p style="margin-top:20px; font-size:14px;">After successful payment, your certificate form will automatically open.<br>Submit it to receive certificate in 1–2 working days.</p>
+`;
+
 
       // Save result to Firebase
       const userId = db.ref("users").push().key;
