--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       result.innerHTML = `
         <h2>Your Score: ${correctCount}/${questions.length}</h2>
         <p>To get your certificate, please pay ₹149.</p>
-        <a class="button" href="https://razorpay.me/@mecktech?amount=14900&currency=INR" target="_blank"
+        <a class="button" href="https://rzp.io/rzp/tL447OSh" target="_blank"
           onclick="setTimeout(() => window.open('${formLink}', '_blank'), 3000)">
           Pay ₹149
         </a>
