--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>MeckTech Assessment</title>
+  <title>MeckTech CS/AIML Assessment</title>
   <style>
     body {
       background: #0f0f0f;
@@ -57,7 +57,7 @@
 <body>
 
   <img src="mecktech-logo.png" alt="MeckTech Logo" class="logo" />
-  <h1>MeckTech Assessment</h1>
+  <h1>MeckTech CS/AIML Assessment</h1>
 
   <div id="startForm">
     <input type="text" id="fullName" placeholder="Full Name"><br>
