--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>MeckTech Assessment</title>
+  <title>MeckTech CS/AIML Assessment</title>
   <style>
     body { background: #0f0f0f; color: #fff; font-family: 'Segoe UI', sans-serif; text-align: center; padding: 30px 20px; }
     .logo { max-width: 120px; margin-bottom: 20px; }
@@ -16,7 +16,7 @@
 <body>
 
   <img src="mecktech-logo.png" class="logo" alt="MeckTech Logo" />
-  <h1>MeckTech Assessment</h1>
+  <h1>MeckTech Technologies</h1>
 
   <div id="startForm">
     <input type="text" id="fullName" placeholder="Full Name"><br>
@@ -27,7 +27,7 @@
   <div id="quiz" style="display:none;"></div>
   <div id="result" style="display:none;"></div>
   <div id="thankyou" style="display:none;">
-    <h2>🎉 Thank You!</h2>
+    <h2>🎉 congrats!</h2>
     <p>Your certificate will be emailed to you within 1–2 working days.</p>
   </div>
 
@@ -112,10 +112,10 @@
 
     function payWithRazorpay() {
       const options = {
-        key: "YOUR_RAZORPAY_KEY_ID",             // ← replace with your Key ID
+        key: "rzp_live_w7rhHpCVeP0Rqg",             // ← replace with your Key ID
         amount: 14900,                           // ₹149 in paise
         currency: "INR",
-        name: "MeckTech Certificate",
+        name: "MeckTech Technologies",
         description: "Payment for Assessment Certificate",
         handler: function (response) {
           // payment successful
