--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>MeckTech CS/AIML Assessment</title>
+  <title>MeckTech Technologies</title>
   <style>
     body { background: #0f0f0f; color: #fff; font-family: 'Segoe UI', sans-serif; text-align: center; padding: 30px 20px; }
     .logo { max-width: 120px; margin-bottom: 20px; }
@@ -16,7 +16,7 @@
 <body>
 
   <img src="mecktech-logo.png" class="logo" alt="MeckTech Logo" />
-  <h1>MeckTech Technologies</h1>
+  <h1>MeckTech CS/AIML Assessment</h1>
 
   <div id="startForm">
     <input type="text" id="fullName" placeholder="Full Name"><br>
