--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
         <h2>Your Score: ${correctCount}/${questions.length}</h2>
         <p>To get your certificate, please complete payment below:</p>
         <button onclick="payWithRazorpay()">Pay ₹149</button>
+        <p>Your certificate will be emailed to you within 1–2 working days.</p>
+        <p>You performed assessment well, All the best for future.</p>
       `;
       document.getElementById("result").style.display = "block";
     }
