--- a/index.html
+++ b/index.html
@@ -105,10 +105,13 @@
       document.getElementById("result").innerHTML = `
         <h2>Your Score: ${correctCount}/${questions.length}</h2>
         <p>To get your certificate, please complete payment below:</p>
-        <button onclick="payWithRazorpay()" style="padding: 10px 20px; font-size: 16px; background-color: #28a745; color: white; border: none; border-radius: 6px; display: flex; align-items: center; gap: 10px; justify-content: center;">
-  <span>Pay ₹149</span>
-  <span style="text-decoration: line-through; color: #ccc; font-size: 14px;">₹219</span>
-</button>
+<div style="display: flex; justify-content: center; margin-top: 20px;">
+  <button onclick="payWithRazorpay()" style="padding: 10px 20px; font-size: 16px; background-color: #28a745; color: white; border: none; border-radius: 6px; display: flex; align-items: center; gap: 10px;">
+    <span>Pay ₹149</span>
+    <span style="text-decoration: line-through; color: #ccc; font-size: 14px;">₹219</span>
+  </button>
+</div>
+
 
         <p>Your certificate will be emailed to you within 1–2 working days.</p>
         <p>You performed assessment well, All the best for future.</p>
