--- a/index.html
+++ b/index.html
@@ -1,104 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>MeckTech Assessment</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MeckTech CS/AIML Assessment</title>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   <style>
     body {
-      background-color: #121212;
-      color: white;
-      font-family: 'Segoe UI', sans-serif;
       margin: 0;
-      padding: 0;
+      background: #121212;
+      color: white;
+      font-family: sans-serif;
     }
-    .container {
-      max-width: 700px;
+    .main {
+      max-width: 600px;
       margin: auto;
       padding: 20px;
     }
-    .card {
-      background: #1e1e1e;
+    .logo {
+      display: block;
+      margin: 10px auto;
+      width: 100px;
+    }
+    .box {
+      background: #1f1f1f;
       padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 0 10px #000;
+      border-radius: 10px;
+      margin-bottom: 20px;
     }
     input, button {
       width: 100%;
-      padding: 10px;
+      padding: 12px;
       margin: 10px 0;
       border-radius: 6px;
       border: none;
-      font-size: 16px;
     }
     button {
-      background-color: #00b894;
+      background: #00b894;
       color: white;
+      font-weight: bold;
       cursor: pointer;
     }
-    .question-box {
-      margin: 20px 0;
-    }
     .option {
-      display: flex;
-      justify-content: space-between;
       background: #2c2c2c;
       padding: 10px;
-      border-radius: 8px;
-      margin-top: 10px;
+      margin: 8px 0;
+      border-radius: 6px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       cursor: pointer;
     }
     .hidden {
       display: none;
     }
-    .logo {
-      display: block;
-      margin: 0 auto;
-      width: 100px;
+    .price-row {
+      text-align: center;
+      margin-bottom: 10px;
     }
-    .price-box {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 10px;
-    }
-    .slash {
+    .price-row span.slash {
       text-decoration: line-through;
-      color: #aaa;
+      color: gray;
+      margin-left: 10px;
+    }
+    .thankyou {
+      text-align: center;
+    }
+    .thankyou p {
+      font-size: 16px;
+    }
+    .disclaimer {
+      font-size: 11px;
+      color: #888;
+      margin-top: 30px;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <img src="mecktech-logo.png" class="logo" alt="Logo" />
+  <div class="main">
+    <img src="mecktech-logo.png" class="logo">
     <h2 style="text-align:center" id="brandName">MeckTech</h2>
 
-    <div id="userForm" class="card">
-      <input type="text" id="name" placeholder="Enter your full name" />
-      <input type="email" id="email" placeholder="Enter your email" />
+    <div id="userForm" class="box">
+      <input type="text" id="name" placeholder="Enter your name">
+      <input type="email" id="email" placeholder="Enter your email">
       <button onclick="startTest()">Start Test</button>
     </div>
 
-    <div id="quizSection" class="hidden card">
-      <div id="questionContainer"></div>
+    <div id="quizSection" class="box hidden">
+      <div id="questionBox"></div>
       <button onclick="nextQuestion()">Next</button>
     </div>
 
-    <div id="result" class="hidden card">
+    <div id="resultSection" class="box hidden">
       <h3 id="scoreText"></h3>
-      <p>To get your certificate, complete payment below:</p>
-      <div class="price-box">
-        <span style="font-size:18px;">Pay ₹149</span>
+      <div class="price-row">
+        <span><b>Pay ₹149</b></span>
         <span class="slash">₹219</span>
       </div>
-      <button onclick="payWithRazorpay()">Pay Now</button>
+      <button onclick="payNow()">Pay Now</button>
     </div>
 
-    <div id="thankyou" class="hidden card">
+    <div id="thankSection" class="box hidden thankyou">
       <h2>Thank You!</h2>
-      <p>Your certificate will be sent to your email within 1–2 working days.</p>
+      <p>Your certificate will be sent to your registered email within 1–2 working days.</p>
+      <p>For support: <a href="mailto:royalmanagement02@gmail.com" style="color:#00bcd4;">royalmanagement02@gmail.com</a></p>
+      <div class="disclaimer">
+        MeckTech doesn't claim any partnership with any other company. This assessment is based on your personal knowledge about CS/AI-ML course. We hope our certificate helps you in future. All the best.
+      </div>
     </div>
   </div>
 
@@ -115,84 +126,76 @@
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
-    let questions = [];
-    let current = 0;
-    let correctCount = 0;
-    let userData = {};
+    let questions = [], current = 0, score = 0;
+    let user = {};
 
-    db.ref("branding/name").once("value", snap => {
-      if (snap.exists()) document.getElementById("brandName").innerText = snap.val();
+    db.ref("branding/name").once('value').then(snap => {
+      document.getElementById("brandName").innerText = snap.val();
     });
-
-    db.ref("questions").once("value", snap => {
-      snap.forEach(child => questions.push(child.val()));
+    db.ref("questions").once('value').then(snap => {
+      snap.forEach(q => questions.push(q.val()));
     });
 
     function startTest() {
-      const name = document.getElementById("name").value;
-      const email = document.getElementById("email").value;
+      let name = document.getElementById("name").value;
+      let email = document.getElementById("email").value;
       if (!name || !email) return alert("Please fill all fields");
-      userData = { name, email };
-
+      user = { name, email };
       document.getElementById("userForm").classList.add("hidden");
       document.getElementById("quizSection").classList.remove("hidden");
-      loadQuestion();
+      showQuestion();
     }
 
-    function loadQuestion() {
-      const q = questions[current];
-      const qBox = document.getElementById("questionContainer");
-      qBox.innerHTML = `<div class="question-box">
-        <h3>Q${current + 1}: ${q.text}</h3>
-        ${q.options.map((opt, i) =>
-          `<div class="option" onclick="selectOption(${i})">${opt}<input type="radio" name="option" value="${i}" /></div>`
-        ).join("")}
-      </div>`;
+    function showQuestion() {
+      let q = questions[current];
+      let html = `<h3>Q${current + 1}: ${q.text}</h3>`;
+      q.options.forEach((opt, i) => {
+        html += `<div class='option' onclick='select(${i})'>${opt}<input type='radio' name='opt' value='${i}'></div>`;
+      });
+      document.getElementById("questionBox").innerHTML = html;
     }
 
     let selected = -1;
-    function selectOption(i) {
+    function select(i) {
       selected = i;
-      const radios = document.querySelectorAll("input[type='radio']");
-      radios.forEach(r => r.checked = false);
-      radios[i].checked = true;
+      document.querySelectorAll("input[type='radio']").forEach(r => r.checked = false);
+      document.querySelectorAll("input[type='radio']")[i].checked = true;
     }
 
     function nextQuestion() {
-      if (selected === -1) return alert("Please select an option.");
-      if (selected == questions[current].correct) correctCount++;
-      selected = -1;
+      if (selected === -1) return alert("Select an option");
+      if (selected == questions[current].correct) score++;
       current++;
+      selected = -1;
       if (current < questions.length) {
-        loadQuestion();
+        showQuestion();
       } else {
         document.getElementById("quizSection").classList.add("hidden");
-        document.getElementById("scoreText").innerText = `Your Score: ${correctCount}/${questions.length}`;
-        document.getElementById("result").classList.remove("hidden");
+        document.getElementById("resultSection").classList.remove("hidden");
+        document.getElementById("scoreText").innerText = `Your Score: ${score}/${questions.length}`;
       }
     }
 
-    function payWithRazorpay() {
+    function payNow() {
       const options = {
-        key: "rzp_live_w7rhHpCVeP0Rqg", // replace with your key
+        key: "rzp_live_w7rhHpCVeP0Rqg",
         amount: 14900,
         currency: "INR",
         name: "MeckTech",
-        description: "Assessment Certificate",
+        description: "Assessment Payment",
         prefill: {
-          name: userData.name,
-          email: userData.email
+          name: user.name,
+          email: user.email
         },
-        handler: function (response) {
-          const key = db.ref("users").push().key;
-          db.ref("users/" + key).set({
-            name: userData.name,
-            email: userData.email,
-            score: correctCount
+        handler: function () {
+          const id = db.ref("users").push().key;
+          db.ref("users/" + id).set({
+            name: user.name,
+            email: user.email,
+            score: score
           });
-
-          document.getElementById("result").classList.add("hidden");
-          document.getElementById("thankyou").classList.remove("hidden");
+          document.getElementById("resultSection").classList.add("hidden");
+          document.getElementById("thankSection").classList.remove("hidden");
         }
       };
       const rzp = new Razorpay(options);
