--- a/index.html
+++ b/index.html
@@ -1,122 +1,45 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MeckTech CS/AIML Assessment</title>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+  <meta charset="UTF-8" />
+  <title>MeckTech Technologies</title>
   <style>
-    body {
-      margin: 0;
-      background-color: #121212;
-      color: #fff;
-      font-family: 'Segoe UI', sans-serif;
-    }
-    .container {
-      max-width: 600px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-    .logo {
-      display: block;
-      margin: 20px auto 10px;
-      width: 100px;
-    }
-    h2 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    .box {
-      background: #1e1e1e;
-      padding: 20px;
-      border-radius: 8px;
-      margin-bottom: 20px;
-    }
-    input, button {
-      width: 100%;
-      padding: 12px;
-      margin: 10px 0;
-      border-radius: 6px;
-      border: none;
-      font-size: 16px;
-    }
-    button {
-      background-color: #00b894;
-      color: white;
-      font-weight: bold;
-      cursor: pointer;
-    }
-    .option {
-      background: #2a2a2a;
-      padding: 10px;
-      margin: 10px 0;
-      border-radius: 6px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    .hidden {
-      display: none;
-    }
-    .price-box {
-      text-align: center;
-      margin-top: 10px;
-    }
-    .price-box .slash {
-      text-decoration: line-through;
-      color: #999;
-      margin-left: 10px;
-    }
-    .thank-you {
-      text-align: center;
-    }
-    .disclaimer {
-      font-size: 11px;
-      color: #888;
-      margin-top: 20px;
-    }
+    body { background: #0f0f0f; color: #fff; font-family: 'Segoe UI', sans-serif; text-align: center; padding: 30px 20px; }
+    .logo { max-width: 120px; margin-bottom: 20px; }
+    input[type="text"], input[type="email"] { padding: 12px; width: 260px; font-size: 16px; margin: 8px; border-radius: 6px; border: none; }
+    button, .button { background-color: #28a745; color: white; padding: 10px 20px; font-size: 16px; border: none; cursor: pointer; margin-top: 10px; border-radius: 6px; }
+    .question-box { background: #1c1c1c; padding: 25px; border-radius: 10px; max-width: 600px; margin: 20px auto; }
+    .option-row { text-align: left; margin: 10px auto; max-width: 500px; background: #2a2a2a; padding: 10px; border-radius: 5px; }
+    .option-row input { margin-right: 10px; }
   </style>
 </head>
 <body>
-  <div class="container">
-    <img src="mecktech-logo.png" class="logo">
-    <h2 id="brandName">MeckTech</h2>
 
-    <div class="box" id="userForm">
-      <input type="text" id="name" placeholder="Enter your name">
-      <input type="email" id="email" placeholder="Enter your email">
-      <button onclick="startTest()">Start Test</button>
-    </div>
+  <img src="mecktech-logo.png" class="logo" alt="MeckTech Logo" />
+  <h1>MeckTech CS/AIML Assessment</h1>
 
-    <div class="box hidden" id="quizBox">
-      <div id="questionBox"></div>
-      <button onclick="nextQuestion()">Next</button>
-    </div>
-
-    <div class="box hidden" id="resultBox">
-      <h3 id="scoreText"></h3>
-      <div class="price-box">
-        <span><b>Pay ₹149</b></span><span class="slash">₹219</span>
-      </div>
-      <button onclick="payNow()">Pay Now</button>
-    </div>
-
-    <div class="box hidden" id="thankBox">
-      <div class="thank-you">
-        <h2>Thank You!</h2>
-        <p>Your payment was successful.</p>
-        <p>Your certificate will be sent to your registered email within 1–2 working days.</p>
-        <p>Contact: <a href="mailto:royalmanagement02@gmail.com" style="color:#4dd0e1">royalmanagement02@gmail.com</a></p>
-        <div class="disclaimer">
-          MeckTech doesn't claim any partnership with any other company. This assessment is based on your personal knowledge about CS/AI-ML course. We hope our certificate helps you in the future. All the best.
-        </div>
-      </div>
-    </div>
+  <div id="startForm">
+    <input type="text" id="fullName" placeholder="Full Name"><br>
+    <input type="email" id="email" placeholder="Email"><br>
+    <button onclick="startAssessment()">Start Assessment</button>
   </div>
 
+  <div id="quiz" style="display:none;"></div>
+  <div id="result" style="display:none;"></div>
+  <div id="thankyou" style="display:none;">
+    <h2>🎉 congrats!</h2>
+    <p>Your certificate will be emailed to you within 1–2 working days.</p>
+  </div>
+
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+  <!-- Razorpay Checkout -->
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
   <script>
+    // Firebase Config
     const firebaseConfig = {
       apiKey: "AIzaSyDg6hedgJB7nK3xVvIrxg04ouFVTkIHe2k",
       authDomain: "mecktech-bbc2e.firebaseapp.com",
@@ -129,80 +52,101 @@
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
-    let questions = [], current = 0, score = 0;
-    let user = {};
+    let userData = {}, questions = [], currentIndex = 0, correctCount = 0;
 
-    db.ref("branding/name").once('value').then(snap => {
-      document.getElementById("brandName").innerText = snap.val();
-    });
-    db.ref("questions").once('value').then(snap => {
-      snap.forEach(q => questions.push(q.val()));
-    });
+    function startAssessment() {
+      const name = document.getElementById("fullName").value.trim();
+      const email = document.getElementById("email").value.trim();
+      if (!name || !email) return alert("Please fill all fields.");
+      userData = { name, email };
+      document.getElementById("startForm").style.display = "none";
+      document.getElementById("quiz").style.display = "block";
+      loadQuestions();
+    }
 
-    function startTest() {
-      let name = document.getElementById("name").value;
-      let email = document.getElementById("email").value;
-      if (!name || !email) return alert("Please fill all fields");
-      user = { name, email };
-      document.getElementById("userForm").classList.add("hidden");
-      document.getElementById("quizBox").classList.remove("hidden");
-      showQuestion();
+    function loadQuestions() {
+      db.ref("questions").once("value", snap => {
+        const data = snap.val();
+        if (!data) return alert("No questions found in database.");
+        questions = Object.values(data);
+        currentIndex = 0; correctCount = 0;
+        showQuestion();
+      });
     }
 
     function showQuestion() {
-      let q = questions[current];
-      let html = `<h3>Q${current + 1}: ${q.text}</h3>`;
-      q.options.forEach((opt, i) => {
-        html += `<div class='option' onclick='select(${i})'>${opt}<input type='radio' name='opt' value='${i}'></div>`;
+      const q = questions[currentIndex];
+      const quiz = document.getElementById("quiz");
+      quiz.innerHTML = `
+        <div class="question-box">
+          <h3>Q${currentIndex + 1}: ${q.text}</h3>
+          ${q.options.map((opt, i) => `
+            <div class="option-row">
+              <label><input type="radio" name="option" value="${i}">${opt}</label>
+            </div>`).join('')}
+          <br><button onclick="submitAnswer()">Next</button>
+        </div>`;
+    }
+
+    function submitAnswer() {
+      const sel = document.querySelector("input[name='option']:checked");
+      if (!sel) return alert("Please select an option.");
+      if (parseInt(sel.value) === parseInt(questions[currentIndex].correct)) correctCount++;
+      currentIndex++;
+      if (currentIndex >= questions.length) endQuiz();
+      else showQuestion();
+    }
+
+    function endQuiz() {
+      document.getElementById("quiz").style.display = "none";
+      // Save result
+      const key = db.ref("users").push().key;
+      db.ref("users/" + key).set({ ...userData, score: correctCount });
+
+      document.getElementById("result").innerHTML = `
+        <h2>Your Score: ${correctCount}/${questions.length}</h2>
+        <p>To get your certificate, please complete payment below:</p>
+<div style="display: flex; justify-content: center; margin-top: 20px;">
+  <button onclick="payWithRazorpay()" style="padding: 10px 20px; font-size: 16px; background-color: #28a745; color: white; border: none; border-radius: 6px; display: flex; align-items: center; gap: 10px;">
+    <span>Pay ₹149</span>
+    <span style="text-decoration: line-through; color: #ccc; font-size: 14px;">₹219</span>
+  </button>
+</div>
+
+
+        <p>Your certificate will be emailed to you within 1–2 working days.</p>
+        <p>You performed assessment well, All the best for future.</p>
+      `;
+      document.getElementById("result").style.display = "block";
+    }
+
+    function payWithRazorpay() {
+  const options = {
+    key: "rzp_live_w7rhHpCVeP0Rqg",
+    amount: 14900,
+    currency: "INR",
+    name: "MeckTech Technologies",
+    description: "Payment for CS/AIML Certificate",
+    prefill: {
+      name: userData.name,
+      email: userData.email
+    },
+    handler: function (response) {
+      // ✅ Save paid user only after successful payment
+      const key = db.ref("users").push().key;
+      db.ref("users/" + key).set({
+        name: userData.name,
+        email: userData.email,
+        score: correctCount
       });
-      document.getElementById("questionBox").innerHTML = html;
-    }
 
-    let selected = -1;
-    function select(i) {
-      selected = i;
-      document.querySelectorAll("input[type='radio']").forEach(r => r.checked = false);
-      document.querySelectorAll("input[type='radio']")[i].checked = true;
+      // ✅ Show thank you message
+      document.getElementById("Result").style.display = "none";
+      document.getElementById("ThankYou").style.display = "block";
     }
-
-    function nextQuestion() {
-      if (selected === -1) return alert("Please select an option");
-      if (selected == questions[current].correct) score++;
-      current++;
-      selected = -1;
-      if (current < questions.length) {
-        showQuestion();
-      } else {
-        document.getElementById("quizBox").classList.add("hidden");
-        document.getElementById("resultBox").classList.remove("hidden");
-        document.getElementById("scoreText").innerText = `Your Score: ${score}/${questions.length}`;
-      }
-    }
-
-    function payNow() {
-      const options = {
-        key: "rzp_live_w7rhHpCVeP0Rqg",
-        amount: 14900,
-        currency: "INR",
-        name: "MeckTech",
-        description: "Assessment Fee",
-        prefill: {
-          name: user.name,
-          email: user.email
-        },
-        handler: function () {
-          const id = db.ref("users").push().key;
-          db.ref("users/" + id).set({
-            name: user.name,
-            email: user.email,
-            score: score
-          });
-          document.getElementById("resultBox").classList.add("hidden");
-          document.getElementById("thankBox").classList.remove("hidden");
-        }
-      };
-      const rzp = new Razorpay(options);
-      rzp.open();
+  };
+  const rzp = new Razorpay(options);
+  rzp.open();
     }
   </script>
 </body>
